# dreamcoat

./: .gitignore  .vimrc  .zenodo.json  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
cmems/: index.html
docs/: cmems.md  index.md  modis.md  send.md  versions.md
docs/stylesheets/: colours.css
dreamcoat/: __init__.py  cmems.py  convert.py  ctd.py  glider.py  mapping.py  meta.py  modis.py  neutral.py  plot.py  send.py  stats.py  style.py  underway.py
dreamcoat/great_circle_calculator/: README.md  __conversion.py  __error_checking.py  _constants.py  compass.py  great_circle_calculator.py
dreamcoat/mapping/: __init__.py
dreamcoat/maps/: __init__.py  degrees_decimal_minutes.py
dreamcoat/maps/vptree/: README.md  __init__.py
examples/: distance_to_shore.py
misc/: neutral_stations.py  xtest_transect.py  xtest_transect_v2.py  xtest_transect_v3.py
modis/: index.html
search/: search_index.json
send/: index.html
stylesheets/: colours.css
tests/: test_LatLon.py  test_cmems.py  test_stats.py  test_surfaces.py  test_transect.py  test_vptree.py  test_vptree_package.py  zipping.py
tests/data/: ctdz.parquet  deep.parquet
versions/: index.html
