[build-system]
requires = [
    "setuptools", 
]
build-backend = "setuptools.build_meta"

[project]
name = "dreamcoat"
description = "The joyful oceanographic seagoing expedition planning helper"
readme = "README.md"
dependencies = [
    "cartopy",
    "geographiclib",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "dreamcoat.meta.version_number"}
